# ApprovalTests.cpp

./: .clang-format  .gitattributes  .gitignore  .mdl_style.rb  .mdlrc  .readthedocs.yaml  .travis.yml  BUILD-Windows.md  BUILD-Windows.source.md  CMakeLists.txt  CMakeLists.txt.in  CODEOWNERS  CODE_OF_CONDUCT.md  README.md  README.source.md  appveyor.yml  cygwin_run.sh  fix_markdown.sed  fix_markdown.sh  mdsnippets.json  mlc_config.json  run_markdown_templates.sh  to_do.txt
ApprovalTests/: ApprovalException.h  ApprovalTests.h  ApprovalTests.hpp  ApprovalTestsVersion.cpp  ApprovalTestsVersion.h  ApprovalUtils.cpp  ApprovalUtils.h  ApprovalWriter.h  Approvals.cpp  Approvals.h  ApprovalsMacroDefaults.cpp  ApprovalsMacroDefaults.h  CMakeLists.txt  Catch2Approvals.h  CombinationApprovals.cpp  CombinationApprovals.h  FileApprover.h  FileUtils.h  FileUtilsSystemSpecific.h  GoogleTestApprovals.h  Macros.h  MinGW.h  OkraApprovals.h  Storyboard.cpp  Storyboard.h  StringUtils.h  StringWriter.h  SystemUtils.h
ApprovalTests/comparators/: ApprovalComparator.h  ComparatorDisposer.cpp  ComparatorDisposer.h  ComparatorFactory.cpp  ComparatorFactory.h  TextFileComparator.cpp  TextFileComparator.h
ApprovalTests/comparers/: ApprovalComparator.h  ApprovalComparer.h  TextFileComparator.h  TextFileComparer.h
ApprovalTests/core/: ApprovalComparator.cpp  ApprovalComparator.h  ApprovalException.cpp  ApprovalException.h  ApprovalNamer.cpp  ApprovalNamer.h  ApprovalWriter.cpp  ApprovalWriter.h  FileApprover.cpp  FileApprover.h  Options.cpp  Options.h  Reporter.cpp  Reporter.h
ApprovalTests/integrations/: CheckFileMacroIsAbsolute.cpp  CheckFileMacroIsAbsolute.h  FrameworkIntegrations.cpp  FrameworkIntegrations.h
ApprovalTests/launchers/: CommandLauncher.cpp  CommandLauncher.h  ForegroundSystemLauncher.h  SystemLauncher.cpp  SystemLauncher.h
ApprovalTests/logs/: ApprovalFileLog.cpp  ApprovalFileLog.hpp
ApprovalTests/namers/: ApprovalNamer.h  ApprovalTestNamer.cpp  ApprovalTestNamer.h  CustomNamer.h  DefaultNamerDisposer.cpp  DefaultNamerDisposer.h  DefaultNamerFactory.cpp  DefaultNamerFactory.h  ExistingFileNamer.cpp  ExistingFileNamer.h  FileNameSanitizerDisposer.cpp  FileNameSanitizerDisposer.h  FileNameSanitizerFactory.cpp  FileNameSanitizerFactory.h  HelpMessages.cpp  HelpMessages.h  MoreHelpMessages.h  NamerFactory.cpp  NamerFactory.h  SectionNameDisposer.cpp  SectionNameDisposer.h  SeparateApprovedAndReceivedDirectoriesNamer.cpp  SeparateApprovedAndReceivedDirectoriesNamer.h  SubdirectoryDisposer.cpp  SubdirectoryDisposer.h  TemplatedCustomNamer.cpp  TemplatedCustomNamer.h
ApprovalTests/reporters/: AutoApproveIfMissingReporter.cpp  AutoApproveIfMissingReporter.h  AutoApproveReporter.cpp  AutoApproveReporter.h  BlockingReporter.cpp  BlockingReporter.h  CIBuildOnlyReporter.cpp  CIBuildOnlyReporter.h  CIBuildOnlyReporterUtils.cpp  CIBuildOnlyReporterUtils.h  ClipboardReporter.cpp  ClipboardReporter.h  CombinationReporter.cpp  CombinationReporter.h  CommandLauncher.h  CommandReporter.cpp  CommandReporter.h  ConsoleDiffReporter.h  ConvertForCygwin.cpp  ConvertForCygwin.h  CrossPlatformReporters.cpp  CrossPlatformReporters.h  CustomReporter.cpp  CustomReporter.h  DefaultFrontLoadedReporter.cpp  DefaultFrontLoadedReporter.h  DefaultReporter.cpp  DefaultReporter.h  DefaultReporterDisposer.cpp  DefaultReporterDisposer.h  DefaultReporterFactory.cpp  DefaultReporterFactory.h  DiffInfo.cpp  DiffInfo.h  DiffPrograms.cpp  DiffPrograms.h  DiffReporter.cpp  DiffReporter.h  EnvironmentVariableReporter.cpp  EnvironmentVariableReporter.h  (+22 more)
ApprovalTests/scrubbers/: Scrubbers.cpp  Scrubbers.h
ApprovalTests/utilities/: Blocker.cpp  Blocker.h  CartesianProduct.cpp  CartesianProduct.h  DateUtils.cpp  DateUtils.h  EmptyFileCreatorByType.cpp  EmptyFileCreatorByType.h  EmptyFileCreatorDisposer.cpp  EmptyFileCreatorDisposer.h  EmptyFileCreatorFactory.cpp  EmptyFileCreatorFactory.h  ExceptionCollector.cpp  ExceptionCollector.h  Grid.h  (+22 more)
ApprovalTests_Catch1_Tests/: ApprovalsTests.cpp  CMakeLists.txt  main.cpp
ApprovalTests_Catch2_Tests/: ApprovalExceptionTests.cpp  ApprovalTests.hpp  ApprovalsTests.YouCanVerifyWithConverterLambda.approved.txt  ApprovalsTests.cpp  CMakeLists.txt  Catch2DocumentationSamples.cpp  CombinationTests.YouCanVerifyCombinationsOf1Reports.approved.txt  CombinationTests.YouCanVerifyCombinationsOf9.approved.txt  CombinationTests.cpp  FileApproverTests.cpp  FileUtilsSystemSpecificTests.cpp  NamerTests.cpp  PairUtilities.h  StringUtilsTests.cpp  StringWriterTests.cpp  StyleGuide.h  SystemUtilsTests.cpp  ToStringExample.cpp  ToStringTemplateExample.cpp  ToStringWrapperExample.AlternativeFormattingCanBeEasyToRead2.approved.txt  ToStringWrapperExample.MultipleLinesCanBeHardToRead.approved.txt  ToStringWrapperExample.cpp  Tutorial.cpp  VectorTests.YouCanVerifyVectors.approved.txt  VectorTests.YouCanVerifyVectorsWithStandardTextNoHeader.approved.txt  VectorTests.cpp  main.cpp
ApprovalTests_DocTest_Tests/: CMakeLists.txt  DocTestDocumentationSamples.cpp  DocTestNamerTests.cpp  main.cpp
ApprovalTests_GoogleTest_Tests/: ApprovalTests.hpp  CMakeLists.txt  GoogleFixtureNamerCustomizationTests.cpp  GoogleNamerTest.cpp  GoogleTestApprovalsTests.cpp  main.cpp  testGoogleNamerCustomizations.cpp
doc/: AllCustomizations.md  ApprovalTestingConcept.md  ApprovalTestingConcept.source.md  ApprovingResults.md  BuildMachinesAndCI.md  BuildingDocumentation.md  CMakeIntegration.md  CMakeLists.txt  CodingPatterns.md  ConanIntegration.md  Configuration.md  Contributing.md  Contributing.source.md  CustomComparators.md  DisposableObjects.md  Doxyfile  Doxyfile.in  FAQ.md  Features.md  Features.source.md  GettingStarted.md  GettingStarted.source.md  Glossary.md  MaintainingDocumentation.md  MultipleOutputFilesPerTest.md  Namers.md  Options.md  Overview.md  OverviewForDoxygen.cpp  PathToApprovalTesting.md  README.md  README.source.md  Reporters.md  Reporters.source.md  Setup.md  SupportingNewTestFramework.md  TemplatePage.md  TemplatePage.source.md  TestRelativeLinks.md  TestingCombinations.md  (+31 more)
examples/: CMakeLists.txt
(+702 files in other folders)
