add_subdirectory(catch2_existing_main)
add_subdirectory(catch2_starter)

add_subdirectory(cpputest_existing_main)
# TODO add_subdirectory(cpputest_starter)

add_subdirectory(doctest_existing_main)
add_subdirectory(doctest_starter)

add_subdirectory(fmt_approvals_demo)

add_subdirectory(googletest_existing_main)
add_subdirectory(googletest_starter)
