add_subdirectory(boost_starter)

add_subdirectory(catch2_existing_main)
add_subdirectory(catch2_starter)

add_subdirectory(catch2_v3_existing_main)
add_subdirectory(catch2_v3_starter)

add_subdirectory(catch2_v3_amalgamated_starter)

add_subdirectory(cpputest_existing_main)
add_subdirectory(cpputest_starter)

add_subdirectory(doctest_existing_main)
add_subdirectory(doctest_starter)

add_subdirectory(fmt_approvals_demo)

add_subdirectory(googletest_existing_main)
add_subdirectory(googletest_starter)

add_subdirectory(out_of_source)

add_subdirectory(ut_starter)
